-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.8
-
None
-
223c163c9 (dev), a74625337 (6.8)
Patch https://codereview.qt-project.org/c/qt/qtgraphs/+/563490 adds example to add/remove/hide/show different series and fixes bars renderer to work correctly. Fix also PieRenderer and PieSeries to work. Note that these probably can't be added into the same example, so separate example would be needed.
- relates to
-
QTBUG-125752 Fix AreaRenderer series add/remove/visibility
-
- Closed
-
For Gerrit Dashboard: QTBUG-125754 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
565600,6 | Fix PieRenderer series add/remove/visibility | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |
570857,2 | Fix PieRenderer series add/remove/visibility | 6.8 | qt/qtgraphs | Status: MERGED | +2 | 0 |