Fix PieRenderer series add/remove/visibility

This change also requires the patch in QtDeclarative

Task-number: QTBUG-125754
Change-Id: If82a0c30e153ad71bb14839a992c043b31da52d6
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit 223c163c9bf6d52d53aeba094bd295e556022348)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>